# compMath

./: .gitignore  2.ipynb  CMakeLists.txt  corner.ipynb  heat_eq.ipynb
lab1/: dat1.csv  diff_scheme_uc.cpp  diff_scheme_uc.h  main.cpp
lab2/: data2.xlsx  main.cpp  newtonian_interpolator.cpp  newtonian_interpolator.h
lab3/: cubic_spline.cpp  cubic_spline.h  cubic_spline_wiki.cpp  cubic_spline_wiki.h  dat3.xlsx  testing_cubicspline.cpp
lab4/: dat4.xlsx  integration.cpp  integration.h  testing_integration.cpp
lab5/: data5lab.xlsx  dikhotomy.cpp  dikhotomy.h  newtonMethod.cpp  newtonMethod.h  out.txt  simpleIteration.cpp  simpleIteration.h  test  testing_lab5.cpp
tools/: factorial.cpp  factorial.h  gauss_method.cpp  gauss_method.h  threediagonalsolver.cpp  threediagonalsolver.h
