project(labs_comp_math)
cmake_minimum_required(VERSION 3.17)
set (CMAKE_CXX_STANDARD 17)

add_executable(first lab1/main.cpp tools/gauss_method.h tools/gauss_method.cpp tools/factorial.cpp tools/factorial.h lab1/diff_scheme_upd.cpp lab1/diff_scheme_upd.h)
add_executable(second lab2/newtonian_interpolator.cpp lab2/newtonian_interpolator.h lab2/main.cpp)
add_executable(third lab3/cubic_spline_wiki.cpp lab3/cubic_spline_wiki.h lab3/testing_cubicspline.cpp lab3/cubic_spline.cpp lab3/cubic_spline.h tools/threediagonalsolver.cpp tools/threediagonalsolver.h)
add_executable(fourth lab4/integration.cpp lab4/integration.h lab4/testing_integration.cpp)
add_executable(fifth lab5/dikhotomy.cpp lab5/dikhotomy.h lab5/testing_lab5.cpp lab5/simpleIteration.cpp lab5/simpleIteration.h lab5/newtonMethod.cpp lab5/newtonMethod.h)
add_executable(sixth lab6/explicitRK.cpp lab6/explicitRK.h)